# scraping-test1

./:  tests.txt  .gitignore  README.md  general.cookies  google.com.cookies  pyproject.toml  python.site.html  python.site.pr.html  scrap-res.json  shortcuts-scrap.py  shortcuts.html  shortcuts.pr.html  shortcuts.txt  test.headers  test1.py  test10.py  test11.py  test12.py  test13.py  test14-bs.py  test14.py  test15_crawler.py  test2.headers  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  tests copy.cookies  tests.cookies  tests_copy.txt  tests_copy2.txt  testsss.py  unqoted-lincs.txt  util.py  win.os.enveron.items.json  win.os.enveron.items.txt  (+6 more)
SctapyProjects/Playwright/: scrapy.cfg
SctapyProjects/Playwright/Playwright/: items.py  middlewares.py  pipelines.py  settings copy.py  settings.py
SctapyProjects/Playwright/Playwright/spiders/: govtorg.py
SctapyProjects/Playwright/playwright-tests/: copy.search_form.json  copy.search_form.v2.json  first_util.py  os-env-11-05.json  ploywright-util.py  pw-test1.py  pw-test2.py  request_info.json  request_info2.json  search_form.json  search_form.v2.json  search_form.v3.json  test1.json  test2.json  test2.py  util.py  win.06.05.24.request_info2.json
SctapyProjects/Playwright/playwright-tests/backup/: 10.05.24_17-32-35-search_form.v2 copy.json  11.05.24_09-43-04-search_form.v2.json  11.05.24_10-03-04-search_form.v2.json  12.05.24_22-58-20-search_form.v3.json
SctapyProjects/Playwright/playwright-tests/config-ststs/: config-test2.py  config-testing.py
SctapyProjects/Playwright/playwright-tests/example-from-github/: books.py  headers.py
SctapyProjects/Quotes/Quotes/: settings.py
SctapyProjects/Quotes/Quotes/spiders/: access-arg-spider.py  errbacks-spider.py  form-request-spider.py  loggin-in-spyder.py  modify-feeds-spyder.py  multi-spyder.py  multi-spyder2.py  quotes_spider.py  run-from-script-pider.py  run-from-script-pider2.py  run-mult-spaders.py  run-mult-spaders2.py  stop-spider.py
SctapyProjects/zakupki/: scrapy.cfg  zakupki-test1.csv  zakupki-test1.json
SctapyProjects/zakupki/.scrapy/httpcache/zakupki/33/332db23edd7aeee81593b005a53bf1f185353009/: meta  pickled_meta  (+3 more)
SctapyProjects/zakupki/feed/: zakupki-2024-04-24T18-55-41+00-00.items.json  zakupki-2024-04-24T18-56-44+00-00.items.json  zakupki-2024-04-24T18-59-09+00-00.items.json  zakupki-2024-04-24T18-59-55+00-00.items.json  zakupki-2024-04-24T19-12-14+00-00.items.json  zakupki.items.json  zakupki.items.xml
SctapyProjects/zakupki/zakupki/: extensions.py  items.py  middlewares.py  pipelines.py  settings.py
SctapyProjects/zakupki/zakupki/spiders/: mydomain.py  zakupki.py  zakupki_spider.py
content/: serwer_test.py
selenium-ststs/: basespider.py  engine.py  setings.py  test1.py  test2.py  zakupki.csv  zakupki2.csv  zakupki3.txt
selenium-ststs/.browsers/firefox/profile/: user.js
selenium-ststs/spiders/: zakupki.py
(+9 files in other folders)
